fixed billards z-index and terraza miradors description

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -69,7 +69,7 @@
 		position:absolute;
 		left: -9999px;
 		background-color: #ffffff;	
-		z-index:50;
+		z-index:10;
 	}
 }
 
@@ -125,6 +125,9 @@ body{
 	background-size: 100%;
 	&:hover{
 		background-position: 0 90%;
+	}
+	.description{
+		z-index:10;
 	}
 }
 
@@ -456,7 +459,7 @@ body{
 	top: 54%;
 	left: 68%;
 	width: 6%;
-	z-index:2;
+	z-index:3;
 	@extend %span;
 	@extend %move;
 	background: url('../images/billardsSprite.png') no-repeat;
